# smugbatch

./: .gitignore  README.md  example-batch.yaml  pyproject.toml
src/smugbatch/: api.py  auth.py  cli.py  config.py  smartrules.py
